RelativeMotionEvent return kHandledSuppressed

RelativeMotionEvent should return kHandledSuppressed
instead of kNotHandled to prevent handle drag event

Bug: 755853
Change-Id: If669df2d154f28bab94e79468d1508eabeab66d0
Reviewed-on: https://chromium-review.googlesource.com/619550
Commit-Queue: Ella Ge <eirage@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496002}
Former-commit-id: ed3b65691d52324dd05131cf9675a943701f877a